--- a/pom.xml
+++ b/pom.xml
@@ -35,10 +35,16 @@
         </repository>
     </repositories>
     <dependencies>
-<dependency>
+        <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
             <version>15.0.1</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>net.sf.jasperreports</groupId>
+            <artifactId>jasperreports</artifactId>
+            <version>6.17.0</version>
         </dependency>
 
         <dependency>
